--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/penguin.ico">
+  <meta name="buisness" content="helping people learn about business">
+  <meta name="author" content="862234077">
 
-  <title>John Doe - Business Administration</title>
+  <title>Bradley Yeung - Business Administration</finance>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/bradleyyeung.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,21 +63,23 @@
         <div class="subheading mb-5">Business Administration📚</div>
         <p class="lead mb-4">Enter bio here<br><br>
 
-        Enter bio here<br><br>
+        Enter bio here<br>Yeah I'm not gonna write 500 words but i will copy paste samples of bios. Debra Carroll knows that successful students become successful adults. This is her 15th year at Edison Elementary School and her 10th year teaching fourth grade. So far, fourth grade is her favorite grade to teach! Mrs. Carroll was the 2011 Newell Unified School District Teacher of the Year, and received her National Board Certification in 2013. She loves science and majored in biology at Arizona State University, where she also earned her teaching credential and Master of Education degree. Mrs. Carroll is excited to begin the best year ever!Manuel Iglesias draws from his life story when writing about the experiences of migrant workers. His first series of poems, My Father's Hands, appeared in The New Yorker and describes how his family crossed the Texas border to give Manuel and his brothers a better life. After receiving his Master's in Fine Arts from Columbia University, Manuel wrote three nonfiction novels about his experiences, including Under the Streaming Sun, which earned the National Prize for Arts and Sciences in 2008. Manuel is currently working on a collection of fictional short stories to be published in early 2021.Melanie Sato opens the line of communication between clients, customers, and businesses to get projects done. With over 20 years in both public and private sectors, Melanie has experience in management consultation, team building, professional development, strategic implementation, and company collaboration. Melanie has managed projects at TechPoint International, Cyberry, and Induster, where she was a finalist for the PMI® Project of the Year. Melanie holds an MBA from Dartmouth University and a current PMP® certification.Karmen Barić connects online brands to their target audiences for the perfect marketing experience. At the University of California, Davis, Karmen learned the importance of applying classic marketing techniques to modern brand strategies from experts in the field, including her Communications professor, Dr. Martin Mitchell. Recently she finished a research paper on customer conversion and participated in a group project on improving SEO. Karmen is currently finishing her Bachelor of Arts in Communications and hopes to intern in an online marketing department in the near future.
+Dr. Jonas Frederikson is an orthopedic surgeon who believes that patient care should be a physician's first priority. He specializes in laparoscopic procedures that minimize pain and recovery time, and has expertise in minimally invasive total knee replacement surgeries. Awarded the Distinguished Service Award from the American Medical Association in 2017, Dr. Frederikson has been published in both the Journal of the American Podiatric Medical Association and the New England Journal of Medicine. He holds a medical degree from the Medical University of South Carolina, where he completed a postdoctoral fellowship in the field of orthopedic medicine.Tim Cook is the CEO of Apple and serves on its board of directors. Before being named CEO in August 2011, Tim was Apple's chief operating officer and was responsible for all of the company's worldwide sales and operations, including end-to-end management of Apple's supply chain, sales activities, and service and support in all markets and countries. He also headed Apple's Macintosh division and played a key role in the continued development of strategic reseller and supplier relationships, ensuring flexibility in response to an increasingly demanding marketplace.
+<br>
 
         Enter bio here
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.twitch.tv/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/byeun003">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/bradyeung21">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:bcyeung21@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +97,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Worked at a Rice factory<br> 
+              • Volunteered in my community<br>
+              • Spent summers volunteering for a science camp<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,15 +109,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
-            <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
-            </p>
+            <h3 class="mb-0">UC Riverside</h3>
+            <div class="subheading mb-3">1st year buisness student</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">October 2020 - present</span>
           </div>
         </div>
 
@@ -191,7 +189,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image11.JPG" width="500px">
+            <img src="img/image12.JPG" width="500px"><br>
+            <img src="img/image13.JPG" width="500px">
+            <img src="img/image14.JPG" width="500px"><br>
         </center>
       </div>
     </section>
